# tts_webui_extension.tortoise_tts

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheel.yml
extension_tortoise/: __init__.py  gen_tortoise.py  main.py  presets.py  save_json.py  tortoise_model_settings_ui.py
tts_webui_extension/tortoise_tts/: TortoiseParameters.py  api.py  gen_tortoise.py  main.py  tortoise_model_settings_ui.py  ui.py
