[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.tortoise_tts"
version = "0.1.0"
description = "Tortoise TTS is a high-quality text-to-speech model with voice cloning capabilities"
readme = "README.md"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tts-webui.tortoise-tts",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.tortoise_tts"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
